[gd_scene load_steps=12 format=2]

[ext_resource path="res://InventoryUI.gd" type="Script" id=1]
[ext_resource path="res://scenes/SimpleMap.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/Main.gd" type="Script" id=3]
[ext_resource path="res://assets/frame1.png" type="Texture" id=4]
[ext_resource path="res://assets/frame2.png" type="Texture" id=5]
[ext_resource path="res://assets/buttonLong_brown_pressed.png" type="Texture" id=6]
[ext_resource path="res://scenes/Label.gd" type="Script" id=7]
[ext_resource path="res://control/HUD.gd" type="Script" id=8]
[ext_resource path="res://assets/fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=11]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 11 )

[sub_resource type="GDScript" id=2]
script/source = "extends Node2D

## 接收结束场景的信号，并且显示该局赢家
## 接收结束场景的信号，并且显示该局赢家
## 接收玩家死亡的信号，并且显示死亡玩家
## 赢家使用string，以便自定义玩家姓名


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"

var main = null
signal dieplayer

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.
	
func playerdie(player):
	emit_signal(\"dieplayer\",player)
	
"

[node name="Main" type="Node2D" groups=["ENVIRONMENT"]]
script = ExtResource( 3 )

[node name="MainMap" parent="." instance=ExtResource( 2 )]
tile_data = PoolIntArray( -6815923, 11, 0, -1638432, -1610612725, 0, -1638431, -1610612725, 0, -1638430, -1610612725, 0, -1638429, -1610612725, 0, -1638428, -1610612725, 0, -1638427, -1610612725, 0, -1638426, -1610612725, 0, -1638425, -1610612725, 0, -1638424, -1610612725, 0, -1638423, -1610612725, 0, -1638422, -1610612725, 0, -1638421, -1610612725, 0, -1638420, -1610612725, 0, -1638419, -1610612725, 0, -1638418, -1610612725, 0, -1638417, -1610612725, 0, -1638416, -1610612725, 0, -1638415, -1610612725, 0, -1638414, -1610612725, 0, -1638413, -1610612725, 0, -1638412, -1610612725, 0, -1638411, -1610612725, 0, -1638410, -1610612725, 0, -1638409, -1610612725, 0, -1638408, -1610612725, 0, -1638407, -1610612725, 0, -1638406, -1610612725, 0, -1638405, -1610612725, 0, -1638404, -1610612725, 0, -1638403, -1610612725, 0, -1638402, -1610612725, 0, -1638401, -1610612725, 0, -1703936, -1610612725, 0, -1703935, -1610612725, 0, -1703934, -1610612725, 0, -1703933, -1610612725, 0, -1703932, -1610612725, 0, -1703931, -1610612725, 0, -1703930, -1610612725, 0, -1703929, -1610612725, 0, -1703928, -1610612725, 0, -1703927, -1610612725, 0, -1703926, -1610612725, 0, -1703925, -1610612725, 0, -1703924, -1610612725, 0, -1703923, -1610612725, 0, -1703922, -1610612725, 0, -1703921, -1610612725, 0, -1703920, -1610612725, 0, -1703919, -1610612725, 0, -1703918, -1610612725, 0, -1703917, -1610612725, 0, -1703916, -1610612725, 0, -1703915, -1610612725, 0, -1703914, -1610612725, 0, -1703913, -1610612725, 0, -1703912, -1610612725, 0, -1703911, -1610612725, 0, -1703910, -1610612725, 0, -1703909, -1610612725, 0, -1703908, -1610612725, 0, -1703907, -1610612725, 0, -1703906, -1610612725, 0, -1703905, -1610612725, 0, -1572896, -1610612725, 0, -1572895, -1610612725, 0, -1572894, -1610612725, 0, -1572893, -1610612725, 0, -1572892, -1610612725, 0, -1572891, -1610612725, 0, -1572890, -1610612725, 0, -1572889, -1610612725, 0, -1572888, -1610612725, 0, -1572887, -1610612725, 0, -1572886, -1610612725, 0, -1572885, -1610612725, 0, -1572884, -1610612725, 0, -1572883, -1610612725, 0, -1572882, -1610612725, 0, -1572881, -1610612725, 0, -1572880, -1610612725, 0, -1572879, -1610612725, 0, -1572878, -1610612725, 0, -1572877, -1610612725, 0, -1572876, -1610612725, 0, -1572875, -1610612725, 0, -1572874, -1610612725, 0, -1572873, -1610612725, 0, -1572872, -1610612725, 0, -1572871, -1610612725, 0, -1572870, -1610612725, 0, -1572869, -1610612725, 0, -1572868, -1610612725, 0, -1572867, -1610612725, 0, -1572866, -1610612725, 0, -1572865, -1610612725, 0, -1638400, -1610612725, 0, -1638399, -1610612725, 0, -1638398, -1610612725, 0, -1638397, -1610612725, 0, -1638396, -1610612725, 0, -1638395, -1610612725, 0, -1638394, -1610612725, 0, -1638393, -1610612725, 0, -1638392, -1610612725, 0, -1638391, -1610612725, 0, -1638390, -1610612725, 0, -1638389, -1610612725, 0, -1638388, -1610612725, 0, -1638387, -1610612725, 0, -1638386, -1610612725, 0, -1638385, -1610612725, 0, -1638384, -1610612725, 0, -1638383, -1610612725, 0, -1638382, -1610612725, 0, -1638381, -1610612725, 0, -1638380, -1610612725, 0, -1638379, -1610612725, 0, -1638378, -1610612725, 0, -1638377, -1610612725, 0, -1638376, -1610612725, 0, -1638375, -1610612725, 0, -1638374, -1610612725, 0, -1638373, -1610612725, 0, -1638372, -1610612725, 0, -1638371, -1610612725, 0, -1638370, -1610612725, 0, -1638369, -1610612725, 0, -1507360, -1610612725, 0, -1507359, -1610612725, 0, -1507358, -1610612725, 0, -1507357, -1610612725, 0, -1507356, -1610612725, 0, -1507355, -1610612725, 0, -1507354, -1610612725, 0, -1507353, -1610612725, 0, -1507352, -1610612725, 0, -1507351, -1610612725, 0, -1507350, -1610612725, 0, -1507349, -1610612725, 0, -1507348, -1610612725, 0, -1507347, -1610612725, 0, -1507346, -1610612725, 0, -1507345, -1610612725, 0, -1507344, -1610612725, 0, -1507343, -1610612725, 0, -1507342, -1610612725, 0, -1507341, -1610612725, 0, -1507340, -1610612725, 0, -1507339, -1610612725, 0, -1507338, -1610612725, 0, -1507337, -1610612725, 0, -1507336, -1610612725, 0, -1507335, -1610612725, 0, -1507334, -1610612725, 0, -1507333, -1610612725, 0, -1507332, -1610612725, 0, -1507331, -1610612725, 0, -1507330, -1610612725, 0, -1507329, -1610612725, 0, -1572864, -1610612725, 0, -1572863, -1610612725, 0, -1572862, -1610612725, 0, -1572861, -1610612725, 0, -1572860, -1610612725, 0, -1572859, -1610612725, 0, -1572858, -1610612725, 0, -1572857, -1610612725, 0, -1572856, -1610612725, 0, -1572855, -1610612725, 0, -1572854, -1610612725, 0, -1572853, -1610612725, 0, -1572852, -1610612725, 0, -1572851, -1610612725, 0, -1572850, -1610612725, 0, -1572849, -1610612725, 0, -1572848, -1610612725, 0, -1572847, -1610612725, 0, -1572846, -1610612725, 0, -1572845, -1610612725, 0, -1572844, -1610612725, 0, -1572843, -1610612725, 0, -1572842, -1610612725, 0, -1572841, -1610612725, 0, -1572840, -1610612725, 0, -1572839, -1610612725, 0, -1572838, -1610612725, 0, -1572837, -1610612725, 0, -1572836, -1610612725, 0, -1572835, -1610612725, 0, -1572834, -1610612725, 0, -1572833, -1610612725, 0, -1441824, -1610612725, 0, -1441823, -1610612725, 0, -1441822, 11, 0, -1507299, 11, 0, -1507298, -1610612725, 0, -1507297, -1610612725, 0, -1376288, -1610612725, 0, -1376287, -1610612725, 0, -1376286, 11, 0, -1441763, 11, 0, -1441762, -1610612725, 0, -1441761, -1610612725, 0, -1310752, -1610612725, 0, -1310751, -1610612725, 0, -1310750, 11, 0, -1376227, 11, 0, -1376226, -1610612725, 0, -1376225, -1610612725, 0, -1245216, -1610612725, 0, -1245215, -1610612725, 0, -1245214, 11, 0, -1310691, 11, 0, -1310690, -1610612725, 0, -1310689, -1610612725, 0, -1179680, -1610612725, 0, -1179679, -1610612725, 0, -1179678, 11, 0, -1245155, 11, 0, -1245154, -1610612725, 0, -1245153, -1610612725, 0, -1114144, -1610612725, 0, -1114143, -1610612725, 0, -1114142, 11, 0, -1179619, 11, 0, -1179618, -1610612725, 0, -1179617, -1610612725, 0, -1048608, -1610612725, 0, -1048607, -1610612725, 0, -1048606, 11, 0, -1114083, 11, 0, -1114082, -1610612725, 0, -1114081, -1610612725, 0, -983072, -1610612725, 0, -983071, -1610612725, 0, -983070, 11, 0, -1048547, 11, 0, -1048546, -1610612725, 0, -1048545, -1610612725, 0, -917536, -1610612725, 0, -917535, -1610612725, 0, -917534, 11, 0, -917511, 7, 0, -917510, 7, 0, -917509, 7, 0, -917508, 7, 0, -917507, 7, 0, -917506, 7, 0, -917505, 7, 0, -983040, 7, 0, -983039, 7, 0, -983038, 7, 0, -983037, 7, 0, -983036, 7, 0, -983035, 7, 0, -983034, 7, 0, -983011, 11, 0, -983010, -1610612725, 0, -983009, -1610612725, 0, -852000, -1610612725, 0, -851999, -1610612725, 0, -851998, 11, 0, -851975, 7, 0, -851974, 7, 0, -851973, 7, 0, -851972, 7, 0, -851971, 7, 0, -851970, 7, 0, -851969, 7, 0, -917504, 7, 0, -917503, 7, 0, -917502, 7, 0, -917501, 7, 0, -917500, 7, 0, -917499, 7, 0, -917498, 7, 0, -917475, 11, 0, -917474, -1610612725, 0, -917473, -1610612725, 0, -786464, -1610612725, 0, -786463, -1610612725, 0, -786462, 11, 0, -786439, 7, 0, -786438, 7, 0, -786437, 7, 0, -786436, 7, 0, -786435, 7, 0, -786434, 7, 0, -786433, 7, 0, -851968, 7, 0, -851967, 7, 0, -851966, 7, 0, -851965, 7, 0, -851964, 7, 0, -851963, 7, 0, -851962, 7, 0, -851939, 11, 0, -851938, -1610612725, 0, -851937, -1610612725, 0, -720928, -1610612725, 0, -720927, -1610612725, 0, -720926, 11, 0, -786403, 11, 0, -786402, -1610612725, 0, -786401, -1610612725, 0, -655392, -1610612725, 0, -655391, -1610612725, 0, -655390, 11, 0, -720867, 11, 0, -720866, -1610612725, 0, -720865, -1610612725, 0, -589856, -1610612725, 0, -589855, -1610612725, 0, -589854, 11, 0, -655331, 11, 0, -655330, -1610612725, 0, -655329, -1610612725, 0, -524320, -1610612725, 0, -524319, -1610612725, 0, -524318, 11, 0, -589795, 11, 0, -589794, -1610612725, 0, -589793, -1610612725, 0, -458784, -1610612725, 0, -458783, -1610612725, 0, -458782, 11, 0, -524259, 11, 0, -524258, -1610612725, 0, -524257, -1610612725, 0, -393248, -1610612725, 0, -393247, -1610612725, 0, -393246, 11, 0, -458723, 11, 0, -458722, -1610612725, 0, -458721, -1610612725, 0, -327712, -1610612725, 0, -327711, -1610612725, 0, -327710, 11, 0, -393187, 11, 0, -393186, -1610612725, 0, -393185, -1610612725, 0, -262176, -1610612725, 0, -262175, -1610612725, 0, -262174, 11, 0, -327651, 11, 0, -327650, -1610612725, 0, -327649, -1610612725, 0, -196640, -1610612725, 0, -196639, -1610612725, 0, -196638, 11, 0, -196626, 7, 0, -196625, 7, 0, -196624, 7, 0, -196623, 7, 0, -196622, 7, 0, -196621, 7, 0, -196620, 7, 0, -196619, 7, 0, -196618, 7, 0, -196617, 7, 0, -196616, 7, 0, -262137, 7, 0, -262136, 7, 0, -262135, 7, 0, -262134, 7, 0, -262133, 7, 0, -262132, 7, 0, -262131, 7, 0, -262130, 7, 0, -262129, 7, 0, -262128, 7, 0, -262127, 7, 0, -262115, 11, 0, -262114, -1610612725, 0, -262113, -1610612725, 0, -131104, -1610612725, 0, -131103, -1610612725, 0, -131102, 11, 0, -131090, 7, 0, -131089, 7, 0, -131088, 7, 0, -131087, 7, 0, -131086, 7, 0, -131085, 7, 0, -131084, 7, 0, -131083, 7, 0, -131082, 7, 0, -131081, 7, 0, -131080, 7, 0, -196601, 7, 0, -196600, 7, 0, -196599, 7, 0, -196598, 7, 0, -196597, 7, 0, -196596, 7, 0, -196595, 7, 0, -196594, 7, 0, -196593, 7, 0, -196592, 7, 0, -196591, 7, 0, -196579, 11, 0, -196578, -1610612725, 0, -196577, -1610612725, 0, -65568, -1610612725, 0, -65567, -1610612725, 0, -65566, 11, 0, -65554, 7, 0, -65553, 7, 0, -65552, 7, 0, -65551, 7, 0, -65550, 7, 0, -65549, 7, 0, -65548, 7, 0, -65547, 7, 0, -65546, 7, 0, -65545, 7, 0, -65544, 7, 0, -131065, 7, 0, -131064, 7, 0, -131063, 7, 0, -131062, 7, 0, -131061, 7, 0, -131060, 7, 0, -131059, 7, 0, -131058, 7, 0, -131057, 7, 0, -131056, 7, 0, -131055, 7, 0, -131043, 11, 0, -131042, -1610612725, 0, -131041, -1610612725, 0, -32, -1610612725, 0, -31, -1610612725, 0, -30, 11, 0, -65507, 11, 0, -65506, -1610612725, 0, -65505, -1610612725, 0, 65504, -1610612725, 0, 65505, -1610612725, 0, 65506, 11, 0, 29, 11, 0, 30, -1610612725, 0, 31, -1610612725, 0, 131040, -1610612725, 0, 131041, -1610612725, 0, 131042, 11, 0, 65565, 11, 0, 65566, -1610612725, 0, 65567, -1610612725, 0, 196576, -1610612725, 0, 196577, -1610612725, 0, 196578, 11, 0, 131101, 11, 0, 131102, -1610612725, 0, 131103, -1610612725, 0, 262112, -1610612725, 0, 262113, -1610612725, 0, 262114, 11, 0, 196637, 11, 0, 196638, -1610612725, 0, 196639, -1610612725, 0, 327648, -1610612725, 0, 327649, -1610612725, 0, 327650, 11, 0, 262173, 11, 0, 262174, -1610612725, 0, 262175, -1610612725, 0, 393184, -1610612725, 0, 393185, -1610612725, 0, 393186, 11, 0, 327709, 11, 0, 327710, -1610612725, 0, 327711, -1610612725, 0, 458720, -1610612725, 0, 458721, -1610612725, 0, 458722, 11, 0, 458735, 0, 0, 458736, 0, 0, 458737, 0, 0, 458738, 0, 0, 458739, 0, 0, 458740, 0, 0, 458741, 0, 0, 458742, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458746, 0, 0, 458747, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393216, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393245, 11, 0, 393246, -1610612725, 0, 393247, -1610612725, 0, 524256, -1610612725, 0, 524257, -1610612725, 0, 524258, 11, 0, 524270, 7, 0, 524271, 7, 0, 524272, 7, 0, 524273, 7, 0, 524274, 7, 0, 524275, 7, 0, 524276, 7, 0, 524277, 7, 0, 524278, 7, 0, 524279, 7, 0, 524280, 7, 0, 524281, 7, 0, 524282, 7, 0, 524283, 7, 0, 524284, 7, 0, 524285, 7, 0, 524286, 7, 0, 524287, 7, 0, 458752, 7, 0, 458753, 7, 0, 458754, 7, 0, 458755, 7, 0, 458756, 7, 0, 458757, 7, 0, 458758, 7, 0, 458759, 7, 0, 458760, 7, 0, 458761, 7, 0, 458762, 7, 0, 458763, 7, 0, 458764, 7, 0, 458765, 7, 0, 458766, 7, 0, 458767, 7, 0, 458768, 7, 0, 458769, 7, 0, 458781, 11, 0, 458782, -1610612725, 0, 458783, -1610612725, 0, 589792, -1610612725, 0, 589793, -1610612725, 0, 589794, 11, 0, 589795, 7, 0, 589796, 7, 0, 589797, 7, 0, 589798, 7, 0, 589799, 7, 0, 589800, 7, 0, 589801, 7, 0, 589802, 7, 0, 589806, 7, 0, 589807, 7, 0, 589808, 7, 0, 589809, 7, 0, 589810, 7, 0, 589811, 7, 0, 589812, 7, 0, 589813, 7, 0, 589814, 7, 0, 589815, 7, 0, 589816, 7, 0, 589817, 7, 0, 589818, 7, 0, 589819, 7, 0, 589820, 7, 0, 589821, 7, 0, 589822, 7, 0, 589823, 7, 0, 524288, 7, 0, 524289, 7, 0, 524290, 7, 0, 524291, 7, 0, 524292, 7, 0, 524293, 7, 0, 524294, 7, 0, 524295, 7, 0, 524296, 7, 0, 524297, 7, 0, 524298, 7, 0, 524299, 7, 0, 524300, 7, 0, 524301, 7, 0, 524302, 7, 0, 524303, 7, 0, 524304, 7, 0, 524305, 7, 0, 524309, 7, 0, 524310, 7, 0, 524311, 7, 0, 524312, 7, 0, 524313, 7, 0, 524314, 7, 0, 524315, 7, 0, 524316, 7, 0, 524317, 11, 0, 524318, -1610612725, 0, 524319, -1610612725, 0, 655328, -1610612725, 0, 655329, -1610612725, 0, 655330, 11, 0, 655331, 7, 0, 655332, 7, 0, 655333, 7, 0, 655334, 7, 0, 655335, 7, 0, 655336, 7, 0, 655337, 7, 0, 655338, 7, 0, 655339, 7, 0, 655340, 7, 0, 655341, 7, 0, 655342, 7, 0, 655343, 7, 0, 655344, 7, 0, 655345, 7, 0, 655346, 7, 0, 655347, 7, 0, 655348, 7, 0, 655349, 7, 0, 655350, 7, 0, 655351, 7, 0, 655352, 7, 0, 655353, 7, 0, 655354, 7, 0, 655355, 7, 0, 655356, 7, 0, 655357, 7, 0, 655358, 7, 0, 655359, 7, 0, 589824, 7, 0, 589825, 7, 0, 589826, 7, 0, 589827, 7, 0, 589828, 7, 0, 589829, 7, 0, 589830, 7, 0, 589831, 7, 0, 589832, 7, 0, 589833, 7, 0, 589834, 7, 0, 589835, 7, 0, 589836, 7, 0, 589837, 7, 0, 589838, 7, 0, 589839, 7, 0, 589840, 7, 0, 589841, 7, 0, 589842, 7, 0, 589843, 7, 0, 589844, 7, 0, 589845, 7, 0, 589846, 7, 0, 589847, 7, 0, 589848, 7, 0, 589849, 7, 0, 589850, 7, 0, 589851, 7, 0, 589852, 7, 0, 589853, 11, 0, 589854, -1610612725, 0, 589855, -1610612725, 0, 720864, -1610612725, 0, 720865, -1610612725, 0, 720866, 11, 0, 720867, 7, 0, 720868, 7, 0, 720869, 7, 0, 720870, 7, 0, 720871, 7, 0, 720872, 7, 0, 720873, 7, 0, 720874, 7, 0, 720875, 7, 0, 720876, 7, 0, 720877, 7, 0, 720878, 7, 0, 720879, 7, 0, 720880, 7, 0, 720881, 7, 0, 720882, 7, 0, 720883, 7, 0, 720884, 7, 0, 720885, 7, 0, 720886, 7, 0, 720887, 7, 0, 720888, 7, 0, 720889, 7, 0, 720890, 7, 0, 720891, 7, 0, 720892, 7, 0, 720893, 7, 0, 720894, 7, 0, 720895, 7, 0, 655360, 7, 0, 655361, 7, 0, 655362, 7, 0, 655363, 7, 0, 655364, 7, 0, 655365, 7, 0, 655366, 7, 0, 655367, 7, 0, 655368, 7, 0, 655369, 7, 0, 655370, 7, 0, 655371, 7, 0, 655372, 7, 0, 655373, 7, 0, 655374, 7, 0, 655375, 7, 0, 655376, 7, 0, 655377, 7, 0, 655378, 7, 0, 655379, 7, 0, 655380, 7, 0, 655381, 7, 0, 655382, 7, 0, 655383, 7, 0, 655384, 7, 0, 655385, 7, 0, 655386, 7, 0, 655387, 7, 0, 655388, 7, 0, 655389, 11, 0, 655390, -1610612725, 0, 655391, -1610612725, 0, 786400, -1610612725, 0, 786401, -1610612725, 0, 786402, 11, 0, 786403, 7, 0, 786404, 7, 0, 786405, 7, 0, 786406, 7, 0, 786407, 7, 0, 786408, 7, 0, 786409, 7, 0, 786410, 7, 0, 786411, 7, 0, 786412, 7, 0, 786413, 7, 0, 786414, 7, 0, 786415, 7, 0, 786416, 7, 0, 786417, 7, 0, 786418, 7, 0, 786419, 7, 0, 786420, 7, 0, 786421, 7, 0, 786422, 7, 0, 786423, 7, 0, 786424, 7, 0, 786425, 7, 0, 786426, 7, 0, 786427, 7, 0, 786428, 7, 0, 786429, 7, 0, 786430, 7, 0, 786431, 7, 0, 720896, 7, 0, 720897, 7, 0, 720898, 7, 0, 720899, 7, 0, 720900, 7, 0, 720901, 7, 0, 720902, 7, 0, 720903, 7, 0, 720904, 7, 0, 720905, 7, 0, 720906, 7, 0, 720907, 7, 0, 720908, 7, 0, 720909, 7, 0, 720910, 7, 0, 720911, 7, 0, 720912, 7, 0, 720913, 7, 0, 720914, 7, 0, 720915, 7, 0, 720916, 7, 0, 720917, 7, 0, 720918, 7, 0, 720919, 7, 0, 720920, 7, 0, 720921, 7, 0, 720922, 7, 0, 720923, 7, 0, 720924, 7, 0, 720925, 11, 0, 720926, -1610612725, 0, 720927, -1610612725, 0, 851936, -1610612725, 0, 851937, -1610612725, 0, 851938, 11, 0, 851939, 7, 0, 851940, 7, 0, 851941, 7, 0, 851942, 7, 0, 851943, 7, 0, 851944, 7, 0, 851945, 7, 0, 851946, 7, 0, 851947, 7, 0, 851948, 7, 0, 851949, 7, 0, 851950, 7, 0, 851951, 7, 0, 851952, 7, 0, 851953, 7, 0, 851954, 7, 0, 851955, 7, 0, 851956, 7, 0, 851957, 7, 0, 851958, 7, 0, 851959, 7, 0, 851960, 7, 0, 851961, 7, 0, 851962, 7, 0, 851963, 7, 0, 851964, 7, 0, 851965, 7, 0, 851966, 7, 0, 851967, 7, 0, 786432, 7, 0, 786433, 7, 0, 786434, 7, 0, 786435, 7, 0, 786436, 7, 0, 786437, 7, 0, 786438, 7, 0, 786439, 7, 0, 786440, 7, 0, 786441, 7, 0, 786442, 7, 0, 786443, 7, 0, 786444, 7, 0, 786445, 7, 0, 786446, 7, 0, 786447, 7, 0, 786448, 7, 0, 786449, 7, 0, 786450, 7, 0, 786451, 7, 0, 786452, 7, 0, 786453, 7, 0, 786454, 7, 0, 786455, 7, 0, 786456, 7, 0, 786457, 7, 0, 786458, 7, 0, 786459, 7, 0, 786460, 7, 0, 786461, 11, 0, 786462, -1610612725, 0, 786463, -1610612725, 0, 917472, -1610612725, 0, 917473, -1610612725, 0, 917474, 11, 0, 917475, 11, 0, 917476, 11, 0, 917477, 11, 0, 917478, 11, 0, 917479, 11, 0, 917480, 11, 0, 917481, 11, 0, 917482, 11, 0, 917483, 11, 0, 917484, 11, 0, 917485, 11, 0, 917486, 11, 0, 917487, 11, 0, 917488, 11, 0, 917489, 11, 0, 917490, 11, 0, 917491, 11, 0, 917492, 11, 0, 917493, 11, 0, 917494, 11, 0, 917495, 11, 0, 917496, 11, 0, 917497, 11, 0, 917498, 11, 0, 917499, 11, 0, 917500, 11, 0, 917501, 11, 0, 917502, 11, 0, 917503, 11, 0, 851968, 11, 0, 851969, 11, 0, 851970, 11, 0, 851971, 11, 0, 851972, 11, 0, 851973, 11, 0, 851974, 11, 0, 851975, 11, 0, 851976, 11, 0, 851977, 11, 0, 851978, 11, 0, 851979, 11, 0, 851980, 11, 0, 851981, 11, 0, 851982, 11, 0, 851983, 11, 0, 851984, 11, 0, 851985, 11, 0, 851986, 11, 0, 851987, 11, 0, 851988, 11, 0, 851989, 11, 0, 851990, 11, 0, 851991, 11, 0, 851992, 11, 0, 851993, 11, 0, 851994, 11, 0, 851995, 11, 0, 851996, 11, 0, 851997, 11, 0, 851998, -1610612725, 0, 851999, -1610612725, 0, 983008, -1610612725, 0, 983009, -1610612725, 0, 983010, -1610612725, 0, 983011, -1610612725, 0, 983012, -1610612725, 0, 983013, -1610612725, 0, 983014, -1610612725, 0, 983015, -1610612725, 0, 983016, -1610612725, 0, 983017, -1610612725, 0, 983018, -1610612725, 0, 983019, -1610612725, 0, 983020, -1610612725, 0, 983021, -1610612725, 0, 983022, -1610612725, 0, 983023, -1610612725, 0, 983024, -1610612725, 0, 983025, -1610612725, 0, 983026, -1610612725, 0, 983027, -1610612725, 0, 983028, -1610612725, 0, 983029, -1610612725, 0, 983030, -1610612725, 0, 983031, -1610612725, 0, 983032, -1610612725, 0, 983033, -1610612725, 0, 983034, -1610612725, 0, 983035, -1610612725, 0, 983036, -1610612725, 0, 983037, -1610612725, 0, 983038, -1610612725, 0, 983039, -1610612725, 0, 917504, -1610612725, 0, 917505, -1610612725, 0, 917506, -1610612725, 0, 917507, -1610612725, 0, 917508, -1610612725, 0, 917509, -1610612725, 0, 917510, -1610612725, 0, 917511, -1610612725, 0, 917512, -1610612725, 0, 917513, -1610612725, 0, 917514, -1610612725, 0, 917515, -1610612725, 0, 917516, -1610612725, 0, 917517, -1610612725, 0, 917518, -1610612725, 0, 917519, -1610612725, 0, 917520, -1610612725, 0, 917521, -1610612725, 0, 917522, -1610612725, 0, 917523, -1610612725, 0, 917524, -1610612725, 0, 917525, -1610612725, 0, 917526, -1610612725, 0, 917527, -1610612725, 0, 917528, -1610612725, 0, 917529, -1610612725, 0, 917530, -1610612725, 0, 917531, -1610612725, 0, 917532, -1610612725, 0, 917533, -1610612725, 0, 917534, -1610612725, 0, 917535, -1610612725, 0, 1048544, -1610612725, 0, 1048545, -1610612725, 0, 1048546, -1610612725, 0, 1048547, -1610612725, 0, 1048548, -1610612725, 0, 1048549, -1610612725, 0, 1048550, -1610612725, 0, 1048551, -1610612725, 0, 1048552, -1610612725, 0, 1048553, -1610612725, 0, 1048554, -1610612725, 0, 1048555, -1610612725, 0, 1048556, -1610612725, 0, 1048557, -1610612725, 0, 1048558, -1610612725, 0, 1048559, -1610612725, 0, 1048560, -1610612725, 0, 1048561, -1610612725, 0, 1048562, -1610612725, 0, 1048563, -1610612725, 0, 1048564, -1610612725, 0, 1048565, -1610612725, 0, 1048566, -1610612725, 0, 1048567, -1610612725, 0, 1048568, -1610612725, 0, 1048569, -1610612725, 0, 1048570, -1610612725, 0, 1048571, -1610612725, 0, 1048572, -1610612725, 0, 1048573, -1610612725, 0, 1048574, -1610612725, 0, 1048575, -1610612725, 0, 983040, -1610612725, 0, 983041, -1610612725, 0, 983042, -1610612725, 0, 983043, -1610612725, 0, 983044, -1610612725, 0, 983045, -1610612725, 0, 983046, -1610612725, 0, 983047, -1610612725, 0, 983048, -1610612725, 0, 983049, -1610612725, 0, 983050, -1610612725, 0, 983051, -1610612725, 0, 983052, -1610612725, 0, 983053, -1610612725, 0, 983054, -1610612725, 0, 983055, -1610612725, 0, 983056, -1610612725, 0, 983057, -1610612725, 0, 983058, -1610612725, 0, 983059, -1610612725, 0, 983060, -1610612725, 0, 983061, -1610612725, 0, 983062, -1610612725, 0, 983063, -1610612725, 0, 983064, -1610612725, 0, 983065, -1610612725, 0, 983066, -1610612725, 0, 983067, -1610612725, 0, 983068, -1610612725, 0, 983069, -1610612725, 0, 983070, -1610612725, 0, 983071, -1610612725, 0 )

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 8 )

[node name="DeathMessage" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -686.5
margin_top = -280.0
margin_right = 686.5
margin_bottom = 280.0
custom_colors/font_color = Color( 0.282353, 0.0431373, 0.0431373, 1 )
custom_colors/font_outline_modulate = Color( 0.137255, 0.027451, 0.027451, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "TEST"
align = 1
valign = 1

[node name="InventoryUI" type="HBoxContainer" parent="HUD"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -80.0
margin_right = 435.0
script = ExtResource( 1 )
texture_selected = ExtResource( 5 )
texture_not_selected = ExtResource( 4 )

[node name="Bar" type="TextureRect" parent="HUD"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -400.0
margin_top = -73.0
margin_right = 400.0
texture = ExtResource( 6 )
stretch_mode = 1

[node name="Label" type="Label" parent="HUD/Bar"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -492.5
margin_top = -24.5
margin_right = -205.5
margin_bottom = -8.5
rect_scale = Vector2( 3.45784, 3.45784 )
text = "qwq"
align = 1
script = ExtResource( 7 )

[node name="ReceiveSignal" type="Node2D" parent="."]
script = SubResource( 2 )

[connection signal="_on_pressed" from="HUD/InventoryUI" to="HUD/InventoryUI" method="_on_InventoryUI__on_pressed"]
